<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".authentication.LanguageActivity"
    android:background="@color/dark_background">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/languageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/indonesiaLanguage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/languageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/indonesia_icon" />
            <TextView
                android:id="@+id/indonesiaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"
                android:textColor="@color/white"
                android:textSize="30sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/englishLanguage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/indonesiaLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/england_icon" />
            <TextView
                android:id="@+id/englishText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="30sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>