<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.EditProfile"
    android:background="@color/dark_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfile"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_title"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:src="@drawable/back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profileText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePicture"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="68dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileText"
                app:layout_constraintVertical_bias="0">

                <ImageView
                    android:id="@+id/profilePictureImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePicture"
                app:layout_constraintVertical_bias="0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/editProfileScrollView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintTop_toBottomOf="@+id/cardProfile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="40dp"/>

            <EditText
                android:id="@+id/inputFullName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullName"
                app:layout_constraintVertical_bias="0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputFullName"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="40dp"/>

            <EditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                app:layout_constraintVertical_bias="0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/emailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="40dp"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailUser"
                app:layout_constraintVertical_bias="0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/passwordUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="40dp"/>

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordUser"
                app:layout_constraintVertical_bias="0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/majorUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="40dp"/>

            <EditText
                android:id="@+id/inputMajor"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/majorUser"
                app:layout_constraintVertical_bias="0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/userBatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batch"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputMajor"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:layout_marginStart="40dp"/>

            <EditText
                android:id="@+id/inputBatch"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userBatch"
                app:layout_constraintVertical_bias="0"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@+id/editProfileScrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>